force-app/main/default/objects/Billing_Setting__mdt/Billing_Setting__mdt.object-meta.xml
<CustomObject>
    <label>請求設定</label>
    <pluralLabel>請求設定</pluralLabel>
</CustomObject>