force-app/main/default/objects/Billing_Setting__mdt/fields/BillingCloseDay__c.field-meta.xml
<CustomField>
    <fullName>BillingCloseDay__c</fullName>
    <label>請求締日</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>