force-app/main/default/objects/Billing_Setting__mdt/fields/InvoiceCreationDay__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCreationDay__c</fullName>
    <label>請求書作成日</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>