force-app/main/default/objects/Billing_Setting__mdt/fields/InvoiceDay__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDay__c</fullName>
    <label>請求日</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>