force-app/main/default/objects/Billing_Setting__mdt/fields/PaymentDueRule__c.field-meta.xml
<CustomField>
    <fullName>PaymentDueRule__c</fullName>
    <label>支払期日ルール</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>翌月末</fullName>
                <default>true</default>
                <label>翌月末</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>