force-app/main/default/objects/Billing_Setting__mdt/fields/TaxRounding__c.field-meta.xml
<CustomField>
    <fullName>TaxRounding__c</fullName>
    <label>消費税端数処理</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>切り上げ</fullName>
                <default>true</default>
                <label>切り上げ</label>
            </value>
            <value>
                <fullName>四捨五入</fullName>
            </value>
            <value>
                <fullName>切り捨て</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>